--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,13 @@
 project:
   id: "open-targets-genetics-dev"
 files:
-  # Peaks file normalized
-  peaks: gs://genetics-portal-dev-analysis/ba13/OTAR034_CHEERS_epimap_Jul22/Full_epimap_adjusted.txt
-  #SNPs file
-  snp: gs://genetics-portal-dev-analysis/ba13/OTAR034_CHEERS_epimap_Jul22/example_GCST004131
-  # Output stat
-  out_stats: gs://genetics-portal-dev-analysis/ba13/OTAR034_CHEERS_epimap_Jul22/example_GCST004131_out_stat
-  # Output peaks
-  out_unique_peaks: gs://genetics-portal-dev-analysis/ba13/OTAR034_CHEERS_epimap_Jul22/example_GCST004131_out_peaks
-  # Output peaks overlap
-  out_snp_peak_overlaps: gs://genetics-portal-dev-analysis/ba13/OTAR034_CHEERS_epimap_Jul22/example_GCST004131_out_overlaps
+  # sumstats to munge
+  input_sumstats:
+  # hapmap3 SNPs to join with munge
+  w_hm3_snps:
+  # sumstats as ldsc inputs
+  munged_sumstats:
+  # ldscores (European)
+  ref_ld_chr:
+  # weights
+  w_ld_chr:
